--- a/Case2Asessor.ipynb
+++ b/Case2Asessor.ipynb
@@ -2931,7 +2931,7 @@
       "source": [
         "import telebot\n",
         "\n",
-        "bot = telebot.TeleBot('6751764233:AAGLyUCHBA1yrXyfmOT5HGgqbMO7Gv2ROu4')\n",
+        "bot = telebot.TeleBot('')\n",
         "\n",
         "@bot.message_handler(commands=['start', 'help'])\n",
         "def send_welcome(message):\n",
