--- a/bot/BotMassivePrimate.ipynb
+++ b/bot/BotMassivePrimate.ipynb
@@ -77,7 +77,7 @@
         "ns.fit(matrix_small, good.Answer)\n",
         "pipe = make_pipeline(vectorizer, svd, ns)\n",
         "\n",
-        "bot = telebot.TeleBot('6751764233:AAGLyUCHBA1yrXyfmOT5HGgqbMO7Gv2ROu4')\n",
+        "bot = telebot.TeleBot('Your token for tg bot')\n",
         "\n",
         "# Словарь для хранения состояний пользователей\n",
         "user_states = {}\n",
